--- a/src/common.css
+++ b/src/common.css
@@ -1,15 +1,15 @@
 body {
-    font-family: "Work Sans", sans-serif;
-    line-height: 1.6;
-    font-size: 1.125rem;
-  }
+	font-family: 'Work Sans', sans-serif;
+	line-height: 1.6;
+	font-size: 1.125rem;
+}
 
-	.btn {
-		cursor: pointer;
-		text-decoration: none;
-		text-transform: uppercase;
-		background: black;
-		color: white;
-		padding: 0.75em 2em;
-		border-radius: 100vmax;
-	}
+.btn {
+	cursor: pointer;
+	text-decoration: none;
+	text-transform: uppercase;
+	background: black;
+	color: white;
+	padding: 0.75em 2em;
+	border-radius: 100vmax;
+}
