--- a/src/main-grid.css
+++ b/src/main-grid.css
@@ -1,53 +1,51 @@
-
-
 .main-grid {
-    --column-count: 6;
-    position: relative;
-    display: grid;
-    column-gap: 1rem;
-    grid-template-columns: minmax(1rem, 1fr) repeat(var(--column-count), minmax(0, 10rem)) minmax(1rem, 1fr);
-  }
-  
-  .main-grid > * {
-    grid-column: 1 / -1;
-    
-    display: grid;
-    grid-template-columns: subgrid;
-  }
-  
-  @media (max-width: 650px){
-    .main-grid > * > * {
-      grid-column: 2 / -2;
-    }
-  }
-  
-  @media (min-width: 650px) {
-    
-    .even-columns > * {
-      grid-column: span var(--col-width);
-    }
-  
-    .even-columns > *:first-child {
-      grid-column: var(--col-start, 2) / span var(--col-width);
-    }
-  
-    .even-columns > *:last-child {
-      grid-column: span var(--col-width) / calc(var(--col-start, 2) * -1);
-    }
-  
-    
-    .two-columns {
-      --col-width: calc(var(--column-count) / 2);
-    }
-   
-    
-    .three-columns {
-      --col-width: calc(var(--column-count) / 3);
-    }
-  }
+	--column-count: 6;
+	position: relative;
+	display: grid;
+	column-gap: 1rem;
+	grid-template-columns: minmax(1rem, 1fr) repeat(var(--column-count), minmax(0, 10rem)) minmax(
+			1rem,
+			1fr
+		);
+}
 
-  .full-split > * {
-    --col-start: 1;
-    --col-width: 4;
-    grid-column: 1 / -1;
-  }
+.main-grid > * {
+	grid-column: 1 / -1;
+
+	display: grid;
+	grid-template-columns: subgrid;
+}
+
+@media (max-width: 650px) {
+	.main-grid > * > * {
+		grid-column: 2 / -2;
+	}
+}
+
+@media (min-width: 650px) {
+	.even-columns > * {
+		grid-column: span var(--col-width);
+	}
+
+	.even-columns > *:first-child {
+		grid-column: var(--col-start, 2) / span var(--col-width);
+	}
+
+	.even-columns > *:last-child {
+		grid-column: span var(--col-width) / calc(var(--col-start, 2) * -1);
+	}
+
+	.two-columns {
+		--col-width: calc(var(--column-count) / 2);
+	}
+
+	.three-columns {
+		--col-width: calc(var(--column-count) / 3);
+	}
+}
+
+.full-split > * {
+	--col-start: 1;
+	--col-width: 4;
+	grid-column: 1 / -1;
+}
